# PROYECTO_STR2

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  adc_handler.c  adc_handler.h  gpio_handler.c  gpio_handler.h  led_handler.c  led_handler.h  main.c  ota_handler.c  ota_handler.h  pwm_handler.c  pwm_handler.h  system_context.h  uart_handler.c  uart_handler.h  web_server.c  web_server.h  wifi_handler.c  wifi_handler.h
main/dashboard/: app.js  dashboard_content.c  dashboard_content.h  index.html  style.css
